# server/routes/files.go
@@ -8,5 +8,6 @@ import (
 
 // FilesRouter is the Router for GoFiber App
 func FilesRouter(app fiber.Router) {
+	app.Get("/:project/:folder/:filename", handlers.DownloadFile())
 	app.Post("/:project/:folder/files", handlers.UploadFile())
 }
